2013-01-10  James Hunt  <james.hunt@ubuntu.com>

	* init/man/init.5: Define job environment table.
	* init/tests/test_job_class.c(): test_environment(): Added call
	  to job_class_environment_init() which is now required to avoid
	  confusing TEST_ALLOC_FAIL().
	* util/man/initctl.8:
	  - Further details in list-env section.
	  - Escape dashes in command names.
	* util/tests/test_initctl.c:
	  - New utility macros: _WAIT_FOR_FILE(), WAIT_FOR_FILE()
	    and TEST_STR_MATCH().
	  - Initial tests for testing job environment table commands.

2013-01-09  James Hunt  <james.hunt@ubuntu.com>

	* init/man/init.5:
	  - Overhauled 'Job environment' section.
	* util/initctl.c:
	  - Added 'unset-env' and 'reset-env' commands.
	  - Added missing periods in usage text.
	  - list_env_qsort_compar(): Renamed from list_env_strcmp_compar(). Now
	    uses strcoll(3) for locale-awareness.
	* init/job_class.c:
	  - job_class_environment_set():
	    - Comments.
	    - Handle scenario where user specifies a variable without an equals.
	* util/man/initctl.8:
	  - Added details for 'get-env', 'set-env', 'unset-env', 'list-env' and
	    'reset-env'.
	  - Tidied up 'usage' stanza section.

2013-01-08  James Hunt  <james.hunt@ubuntu.com>

	* dbus/com.ubuntu.Upstart.xml:
	  - Added UnsetEnv and ResetEnv methods.
	* init/control.c:
	  - control_set_env(): Now uses job_class_environment_set() rather than
	    directly manipulating job_environ array.
	  - control_unset_env(): New function.
	  - control_get_env(): Now calls job_class_environment_get().
	  - control_list_env(): Now calls job_class_environment_get_all().
	    Comments.
	  - control_reset_env(): New function.
	* init/environ.c:
	  - environ_remove(): New function.
	* init/job_class.c:
	  - job_environ now static.
	  - job_class_environment_reset(): New function.
	  - job_class_environment_set(): New function.
	  - job_class_environment_unset(): New function.
	  - job_class_environment_get(): Simplified.